--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,5 @@ deploy:
   provider: script
   script: bash scripts/travis.sh
   skip_cleanup: true
-  on:
-    tags: true
+  # on:
+  #   tags: true
