--- a/douyacun.yml
+++ b/douyacun.yml
@@ -29,7 +29,8 @@ Topics:
       - goroutine和系统线程.md
       - channel.md
       - select.md
-      - grpc.md
+      - grpc入门.md
+      - grpc进阶.md
   Linux:
     Icon:
     Dir: /linux
