--- a/douyacun.yml
+++ b/douyacun.yml
@@ -30,3 +30,10 @@ Topics:
     - 数组拼接为字符串.md
   Linux:
     - 页缓存.md
+    - lnmp.md
+    - linux常用命令.md
+    - gdb.md
+    - iostat.md
+    - 制作centos7系统盘.md
+    - frp内网穿透.md
+    - vmstat.md
