--- a/douyacun.yml
+++ b/douyacun.yml
@@ -29,6 +29,7 @@ Topics:
     - 内存分配.md
     - 数组拼接为字符串.md
     - db连接池.md
+    - time.md
   Linux:
     - 页缓存.md
     - lnmp.md
@@ -39,3 +40,4 @@ Topics:
     - frp内网穿透.md
     - vmstat.md
     - libwebp.md
+  
