--- a/douyacun.yml
+++ b/douyacun.yml
@@ -12,6 +12,7 @@ Topics:
     - mysql锁.md
     - mysql索引.md
     - mysql日志文件.md
+    - innodb事务.md
     - innodb关键特性.md
     - 分布式事务最终一致性.md
     - utf8mb4.md
