pt-online-scheme-change

--- a/douyacun.yml
+++ b/douyacun.yml
@@ -20,6 +20,7 @@ Topics:
     - 权限管理.md
     - mysql常用函数、控制流.md
     - explain.md
+    - pt-online-scheme-change.md
   Golang:
     - 函数方法接口.md
     - 数组切片引用.md
