--- a/douyacun.yml
+++ b/douyacun.yml
@@ -21,6 +21,7 @@ Topics:
     - mysql常用函数、控制流.md
     - explain.md
     - pt-online-scheme-change.md
+    - 20191125充值事故报告.md
   Golang:
     - 函数方法接口.md
     - 数组切片引用.md
