--- a/douyacun.yml
+++ b/douyacun.yml
@@ -39,6 +39,7 @@ Topics:
     - time.md
     - 通用简写表.md
     - websocket.md
+    - delve远程调试.md
   Linux:
     - 页缓存.md
     - lnmp.md
@@ -52,6 +53,7 @@ Topics:
     - sync_fsync_fdatasync.md
     - strace.md
     - epoll.md
+    - centos使用ss代理.md
   Elasticsearch:
     - 安装运行.md
     - logstash.md
