--- a/douyacun.yml
+++ b/douyacun.yml
@@ -66,9 +66,9 @@ Topics:
     - opentracing.md
     - 高并发.md
   algorithm:
-    - 19. 删除链表的倒数第N个节点.md
-    - 21. 合并两个有序链表.md
-    - 23. 合并k个有序链表.md
-    - 25. K 个一组翻转链表.md
-    - 61. 旋转链表.md
+    # - 19. 删除链表的倒数第N个节点.md
+    # - 21. 合并两个有序链表.md
+    # - 23. 合并k个有序链表.md
+    # - 25. K 个一组翻转链表.md
+    # - 61. 旋转链表.md
 
