--- a/douyacun.yml
+++ b/douyacun.yml
@@ -67,6 +67,8 @@ Topics:
     - 高并发.md
     - kong基础.md
     - kong进阶.md
+  openapi:
+    - ip_location.md
   algorithm:
     # - 19. 删除链表的倒数第N个节点.md
     # - 21. 合并两个有序链表.md
