--- a/douyacun.yml
+++ b/douyacun.yml
@@ -83,6 +83,7 @@ Topics:
   kafka:
     - kafka.md
     - kafka持久化.md
+    - kafka-producer.md
   react:
     - react_markdown渲染.md
     - react可移动边框.md
