--- a/douyacun.yml
+++ b/douyacun.yml
@@ -85,6 +85,7 @@ Topics:
     - kafka持久化.md
     - kafka-producer.md
     - kafka-consumer.md
+    - kafka监控.md
   react:
     - react_markdown渲染.md
     - react可移动边框.md
