--- a/douyacun.yml
+++ b/douyacun.yml
@@ -45,6 +45,7 @@ Topics:
     - http-proxy.md
     - delve远程调试.md
     - websocket在线人数.md
+    - go面试题-闭包函数与标准输出阻塞.md
   Linux:
     - 页缓存.md
     - lnmp.md
