--- a/douyacun.yml
+++ b/douyacun.yml
@@ -47,6 +47,7 @@ Topics:
     - websocket在线人数.md
     - go面试题-闭包函数与标准输出阻塞.md
     - 限流.md
+    - go_map_key.md
   Linux:
     - 页缓存.md
     - lnmp.md
