--- a/douyacun.yml
+++ b/douyacun.yml
@@ -48,6 +48,7 @@ Topics:
     - go面试题-闭包函数与标准输出阻塞.md
     - 限流.md
     - go_map_key.md
+    - grpc-protobuf.md
   Linux:
     - 页缓存.md
     - lnmp.md
