PDF工具箱教程

--- a/douyacun.yml
+++ b/douyacun.yml
@@ -88,6 +88,7 @@ Topics:
     - tesseract安装.md
     - pdf去水印手册.md
     - 图片文字识别为word.md
+    - pdf工具箱使用教程.md
   kafka:
     - kafka.md
     - kafka持久化.md
