--- a/douyacun.yml
+++ b/douyacun.yml
@@ -5,111 +5,111 @@ Github: https://github.com/douyacun
 WechatSubscription: douyacun
 WechatSubscriptionQrcode: /assert/douyacun_qrcode.jpg
 Topics:
-  # Redis:
-  #   - redis延迟问题.md
-  #   - 持久化.md
-  # Mysql:
-  #   - mysql主从同步.md
-  #   - mysql锁.md
-  #   - mysql索引.md
-  #   - mysql日志文件.md
-  #   - innodb事务.md
-  #   - innodb关键特性.md
-  #   - 分布式事务最终一致性.md
-  #   - utf8mb4.md
-  #   - 权限管理.md
-  #   - mysql常用函数、控制流.md
-  #   - explain.md
-  #   - pt-online-schema-change.md
-  #   - 20191125充值事故报告.md
-  #   - mysql排序.md
-  #   - mysql存储过程.md
-  # Golang:
-  #   - 函数方法接口.md
-  #   - 类型.md
-  #   - json解析技巧.md
-  #   - goroutine和系统线程.md
-  #   - channel.md
-  #   - select.md
-  #   - grpc入门.md
-  #   - grpc进阶.md
-  #   - 内存分配.md
-  #   - 数组拼接为字符串.md
-  #   - db连接池.md
-  #   - time.md
-  #   - 通用简写表.md
-  #   - websocket.md
-  #   - delve远程调试.md
-  #   - sitemap.md
-  #   - map.md
-  #   - http-proxy.md
-  #   - delve远程调试.md
-  #   - websocket在线人数.md
-  #   - go面试题-闭包函数与标准输出阻塞.md
-  #   - 限流.md
-  #   - go_map_key.md
-  #   - grpc-protobuf.md
-  # Linux:
-  #   - 页缓存.md
-  #   - lnmp.md
-  #   - linux常用命令.md
-  #   - gdb.md
-  #   - iostat.md
-  #   - 制作centos7系统盘.md
-  #   - frp内网穿透.md
-  #   - vmstat.md
-  #   - libwebp.md
-  #   - sync_fsync_fdatasync.md
-  #   - strace.md
-  #   - epoll.md
-  #   - centos使用ss代理.md
-  #   - 负载高.md
-  #   - 负载高定位工具.md
-  # Elasticsearch:
-  #   - 安装运行.md
-  #   - logstash.md
-  #   - 集群.md
-  #   - template.md
-  # Https:
-  #   - http2.md
-  #   - letsencrypt.md
-  # architecture:
-  #   - opentracing.md
-  #   - 高并发.md
-  #   - kong基础.md
-  #   - kong进阶.md
-  #   - etcd.md
-  # openapi:
-  #   - ip_location.md
-  #   - weather_api.md
+  Redis:
+    - redis延迟问题.md
+    - 持久化.md
+  Mysql:
+    - mysql主从同步.md
+    - mysql锁.md
+    - mysql索引.md
+    - mysql日志文件.md
+    - innodb事务.md
+    - innodb关键特性.md
+    - 分布式事务最终一致性.md
+    - utf8mb4.md
+    - 权限管理.md
+    - mysql常用函数、控制流.md
+    - explain.md
+    - pt-online-schema-change.md
+    - 20191125充值事故报告.md
+    - mysql排序.md
+    - mysql存储过程.md
+  Golang:
+    - 函数方法接口.md
+    - 类型.md
+    - json解析技巧.md
+    - goroutine和系统线程.md
+    - channel.md
+    - select.md
+    - grpc入门.md
+    - grpc进阶.md
+    - 内存分配.md
+    - 数组拼接为字符串.md
+    - db连接池.md
+    - time.md
+    - 通用简写表.md
+    - websocket.md
+    - delve远程调试.md
+    - sitemap.md
+    - map.md
+    - http-proxy.md
+    - delve远程调试.md
+    - websocket在线人数.md
+    - go面试题-闭包函数与标准输出阻塞.md
+    - 限流.md
+    - go_map_key.md
+    - grpc-protobuf.md
+  Linux:
+    - 页缓存.md
+    - lnmp.md
+    - linux常用命令.md
+    - gdb.md
+    - iostat.md
+    - 制作centos7系统盘.md
+    - frp内网穿透.md
+    - vmstat.md
+    - libwebp.md
+    - sync_fsync_fdatasync.md
+    - strace.md
+    - epoll.md
+    - centos使用ss代理.md
+    - 负载高.md
+    - 负载高定位工具.md
+  Elasticsearch:
+    - 安装运行.md
+    - logstash.md
+    - 集群.md
+    - template.md
+  Https:
+    - http2.md
+    - letsencrypt.md
+  architecture:
+    - opentracing.md
+    - 高并发.md
+    - kong基础.md
+    - kong进阶.md
+    - etcd.md
+  openapi:
+    - ip_location.md
+    - weather_api.md
   tools:
-  #   - yapi-环境变量.md
-  #   - google-adsense.md
-  #   - tesseract安装.md
-  #   - pdf去水印手册.md
-  #   - 图片文字识别为word.md
+    - yapi-环境变量.md
+    - google-adsense.md
+    - tesseract安装.md
+    - pdf去水印手册.md
+    - 图片文字识别为word.md
     - pdf工具箱使用教程.md
-  # kafka:
-  #   - kafka.md
-  #   - kafka持久化.md
-  #   - kafka-producer.md
-  #   - kafka-consumer.md
-  #   - kafka监控.md
-  #   - kafka多线程消费.md
-  # react:
-  #   - react_markdown渲染.md
-  #   - react可移动边框.md
-  #   - react服务端渲染cookie.md
-  #   - react天气组件-腾讯天气.md
-  #   - react发布npm包.md
-  #   - react-ssr-adsense.md
-  # kong:
-  #   - 重定向.md
-  #   - 日志收集.md
-  # prometheus:
-  #   - prometheus环境搭建.md
-  #   - node_exporter.md
-  # 引流:
-  #   - 知乎.md
-  # 敬请周知:
-  #   - 友情链接.md
+  kafka:
+    - kafka.md
+    - kafka持久化.md
+    - kafka-producer.md
+    - kafka-consumer.md
+    - kafka监控.md
+    - kafka多线程消费.md
+  react:
+    - react_markdown渲染.md
+    - react可移动边框.md
+    - react服务端渲染cookie.md
+    - react天气组件-腾讯天气.md
+    - react发布npm包.md
+    - react-ssr-adsense.md
+  kong:
+    - 重定向.md
+    - 日志收集.md
+  prometheus:
+    - prometheus环境搭建.md
+    - node_exporter.md
+  引流:
+    - 知乎.md
+  敬请周知:
+    - 友情链接.md
