WPS PDF编辑试用-去水印

--- a/douyacun.yml
+++ b/douyacun.yml
@@ -89,6 +89,7 @@ Topics:
     - pdf去水印手册.md
     - 图片文字识别为word.md
     - pdf工具箱使用教程.md
+    - wpspdf编辑试用_去水印.md
   kafka:
     - kafka.md
     - kafka持久化.md
