--- a/douyacun.yml
+++ b/douyacun.yml
@@ -91,6 +91,7 @@ Topics:
     - 图片文字识别为word.md
     - pdf工具箱使用教程.md
     - wpspdf编辑试用_去水印.md
+    - 2023年2月去水印成果.md
   kafka:
     - kafka.md
     - kafka持久化.md
