--- a/douyacun.yml
+++ b/douyacun.yml
@@ -92,6 +92,7 @@ Topics:
     - pdf工具箱使用教程.md
     - wpspdf编辑试用_去水印.md
     - 2023年2月去水印成果.md
+    - pdf删除文字使用介绍.md
   kafka:
     - kafka.md
     - kafka持久化.md
