如何去除亿图图示pdf水印.md

--- a/douyacun.yml
+++ b/douyacun.yml
@@ -93,6 +93,7 @@ Topics:
     - wpspdf编辑试用_去水印.md
     - 2023年2月去水印成果.md
     - pdf删除文字使用介绍.md
+    - 如何去除亿图图示pdf水印.md
   kafka:
     - kafka.md
     - kafka持久化.md
