--- a/douyacun.yml
+++ b/douyacun.yml
@@ -94,6 +94,7 @@ Topics:
     - 2023年2月去水印成果.md
     - pdf删除文字使用介绍.md
     - 如何去除亿图图示pdf水印.md
+    - pdf加白边.md
   kafka:
     - kafka.md
     - kafka持久化.md
