如何去除扫描全能王水印.md

--- a/douyacun.yml
+++ b/douyacun.yml
@@ -95,6 +95,7 @@ Topics:
     - pdf删除文字使用介绍.md
     - 如何去除亿图图示pdf水印.md
     - pdf加白边.md
+    - 如何去除扫描全能王水印.md
   kafka:
     - kafka.md
     - kafka持久化.md
