批量修改PDF文字内容.md

--- a/douyacun.yml
+++ b/douyacun.yml
@@ -96,6 +96,7 @@ Topics:
     - 如何去除亿图图示pdf水印.md
     - pdf加白边.md
     - 如何去除扫描全能王水印.md
+    - 批量修改PDF文字内容.md
   kafka:
     - kafka.md
     - kafka持久化.md
