--- a/douyacun.yml
+++ b/douyacun.yml
@@ -97,6 +97,7 @@ Topics:
     - pdf加白边.md
     - 如何去除扫描全能王水印.md
     - 批量修改PDF文字内容.md
+    - prometheus性能监控.md
   kafka:
     - kafka.md
     - kafka持久化.md
