--- a/douyacun.yml
+++ b/douyacun.yml
@@ -98,6 +98,7 @@ Topics:
     - pdf加白边.md
     - 如何去除扫描全能王水印.md
     - 批量修改PDF文字内容.md
+    - 批量替换pdf文字内容.md
   kafka:
     - kafka.md
     - kafka持久化.md
