mac提示已损坏

--- a/douyacun.yml
+++ b/douyacun.yml
@@ -99,6 +99,7 @@ Topics:
     - 如何去除扫描全能王水印.md
     - 批量修改PDF文字内容.md
     - 批量替换pdf文字内容.md
+    - mac提示已损坏无法打开.md
   kafka:
     - kafka.md
     - kafka持久化.md
