--- a/douyacun.yml
+++ b/douyacun.yml
@@ -100,6 +100,7 @@ Topics:
     - 批量修改PDF文字内容.md
     - 批量替换pdf文字内容.md
     - mac提示已损坏无法打开.md
+    - pdf工具箱批量加水印.md
   kafka:
     - kafka.md
     - kafka持久化.md
