--- a/douyacun.yml
+++ b/douyacun.yml
@@ -51,6 +51,7 @@ Topics:
     - grpc-protobuf.md
     - go-struct-excel.md
     - prometheus性能监控.md
+    - time坑.md
   Linux:
     - 页缓存.md
     - lnmp.md
